--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,10 +9,14 @@
     <style>
         /* 右端の細いナビ（固定） */
         .side-nav {
-            position: fixed; /* 画面スクロールしても固定 */
-            right: -5px; /* さらに右へ */
-            top: 80%; /* 画面中央に固定 */
-            transform: translateY(-50%) translateX(15px); /* 中央配置と右ずらし */
+            position: fixed;
+            /* 画面スクロールしても固定 */
+            right: -5px;
+            /* さらに右へ */
+            top: 80%;
+            /* 画面中央に固定 */
+            transform: translateY(-50%) translateX(15px);
+            /* 中央配置と右ずらし */
             background: #13ca5e;
             display: flex;
             flex-direction: column;
@@ -19,11 +24,13 @@
             padding: 4px;
             border-radius: 10px 0 0 10px;
             z-index: 1000;
-            width: 35px; /* さらに細く */
+            width: 35px;
+            /* さらに細く */
         }
 
         .side-nav a:active {
-            transform: scale(1.0); /* タップした後に元のサイズに戻す */
+            transform: scale(1.0);
+            /* タップした後に元のサイズに戻す */
         }
 
         .side-nav a {
@@ -44,17 +51,22 @@
         }
 
         .side-nav a span {
-            font-size: 24px; /* 矢印をさらに大きく */
+            font-size: 24px;
+            /* 矢印をさらに大きく */
             position: absolute;
-            left: -0px; /* 左端に寄せる */
-            top: 13px; /* さらに下へ */
+            left: -0px;
+            /* 左端に寄せる */
+            top: 13px;
+            /* さらに下へ */
         }
 
         /* スマホ用の微調整 */
         @media (max-width: 600px) {
             .side-nav {
-                right: 2px; /* スマホではさらに右端に */
-                width: 30px; /* もっと細く */
+                right: 2px;
+                /* スマホではさらに右端に */
+                width: 30px;
+                /* もっと細く */
             }
 
             .side-nav a {
@@ -63,7 +75,8 @@
             }
 
             .side-nav a i {
-                font-size: 12px; /* スマホではもっと小さく */
+                font-size: 12px;
+                /* スマホではもっと小さく */
             }
         }
 
@@ -270,59 +283,63 @@
             transition: all 0.3s ease;
         }
 
-/* 基本スタイル */
-.info-text {
-    margin: 20px 0;
-    font-family: "Noto Sans JP", "Roboto", sans-serif;
-    font-size: 14px;
-    color: #333; /* 読みやすい濃い文字色 */
-    background-color: #f8f9fa;
-    line-height: 1.8;
-    text-align: left;
-    word-wrap: break-word;
-    padding: 20px;
-    border-radius: 8px;
-    border: 1px solid #ced4da;
-    max-width: 800px; /* 横幅制限 */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* 軽い影を追加 */
-    overflow-y: auto; /* 長文スクロール対応 */
-}
+        /* 基本スタイル */
+        .info-text {
+            margin: 20px 0;
+            font-family: "Noto Sans JP", "Roboto", sans-serif;
+            font-size: 14px;
+            color: #333;
+            /* 読みやすい濃い文字色 */
+            background-color: #f8f9fa;
+            line-height: 1.8;
+            text-align: left;
+            word-wrap: break-word;
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #ced4da;
+            max-width: 800px;
+            /* 横幅制限 */
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            /* 軽い影を追加 */
+            overflow-y: auto;
+            /* 長文スクロール対応 */
+        }
 
-/* 見出しスタイル */
-.info-text h1 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
+        /* 見出しスタイル */
+        .info-text h1 {
+            font-size: 18px;
+            font-weight: bold;
+            margin-bottom: 10px;
+        }
 
-.info-text h2 {
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 15px;
-    margin-bottom: 8px;
-}
+        .info-text h2 {
+            font-size: 16px;
+            font-weight: bold;
+            margin-top: 15px;
+            margin-bottom: 8px;
+        }
 
-/* 強調テキスト */
-.info-text strong {
-    color: #007bff;
-}
+        /* 強調テキスト */
+        .info-text strong {
+            color: #007bff;
+        }
 
-/* モバイル向け調整 */
-@media (max-width: 768px) {
-    .info-text {
-        font-size: 13px;
-        padding: 15px;
-        max-width: 100%;
-    }
+        /* モバイル向け調整 */
+        @media (max-width: 768px) {
+            .info-text {
+                font-size: 13px;
+                padding: 15px;
+                max-width: 100%;
+            }
 
-    .info-text h1 {
-        font-size: 16px;
-    }
+            .info-text h1 {
+                font-size: 16px;
+            }
 
-    .info-text h2 {
-        font-size: 14px;
-    }
-}
+            .info-text h2 {
+                font-size: 14px;
+            }
+        }
 
         .info-textmemo {
             margin-top: 20px;
@@ -448,40 +465,40 @@
             /* 影も控えめに */
         }
 
-    /* ナビゲーションバー */
-    .sidebar {
-        position: fixed;
-        right: 0;
-        top: 50%;
-        transform: translateY(-50%);
-        background: #1e1e2d;
-        padding: 10px;
-        border-radius: 10px 0 0 10px;
-        z-index: 1000;
-    }
+        /* ナビゲーションバー */
+        .sidebar {
+            position: fixed;
+            right: 0;
+            top: 50%;
+            transform: translateY(-50%);
+            background: #1e1e2d;
+            padding: 10px;
+            border-radius: 10px 0 0 10px;
+            z-index: 1000;
+        }
 
-    .sidebar a {
-        display: block;
-        padding: 15px;
-        color: white;
-        text-decoration: none;
-        text-align: center;
-        font-size: 14px;
-        margin-bottom: 10px;
-        background: #4a90e2;
-        border-radius: 5px;
-        transition: background 0.3s;
-    }
+        .sidebar a {
+            display: block;
+            padding: 15px;
+            color: white;
+            text-decoration: none;
+            text-align: center;
+            font-size: 14px;
+            margin-bottom: 10px;
+            background: #4a90e2;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
 
-    .sidebar a:hover {
-        background: #357ac4;
-    }
+        .sidebar a:hover {
+            background: #357ac4;
+        }
 
-    /* スクロール用のセクション */
-    .section {
-        padding: 50px 10px;
-        margin-top: 30px;
-    }
+        /* スクロール用のセクション */
+        .section {
+            padding: 50px 10px;
+            margin-top: 30px;
+        }
     </style>
 </head>
 
@@ -497,28 +514,25 @@
     <div class="container">
         <h1>アンケート<br>アンケートフォーム</h1>
         <div class="info-text">以下全て入力後【アンケート送信】ボタンを押してください。</div>
-        <div class="label">ご来店日(例:西暦記載 ○年○月○日)</div>
-        <textarea id="priority" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">お名前(漢字フルネーム/ふりがな)</div>
-        <textarea id="message2" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">生年月日(例:西暦記載 ○年○月○日)</div>
-        <textarea id="message3" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">電話番号</div>
-        <textarea id="message4" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
-
-        <div class="label">お住まい(都道府県/市区町村まで)</div>
-        <textarea id="message5" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">ご職業</div>
         <div class="priority-buttons">
-            <button type="button" id="onepriority" onclick="selectpriority(this)"> 会社員（職業）</button>
-            <button type="button" id="twopriority" onclick="selectpriority(this)">パート・アルバイト（職業）</button>
-            <button type="button" id="threepriority" onclick="selectpriority(this)">学生（職業）</button>
-            <button type="button" id="fourpriority" onclick="selectpriority(this)">専業主婦（職業）</button>
-            <button type="button" id="fivepriority" onclick="selectpriority(this)">その他（職業）</button>
+            <button type="button" id="onepriority" onclick="selectpriority(this)">🦴 肩こり・首の痛み</button>
+            <button type="button" id="twopriority" onclick="selectpriority(this)">💥 腰痛・ぎっくり腰</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">🦵 膝の痛み・関節の違和感</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">🚶‍♀️ 姿勢の歪み・猫背</button>
+            <button type="button" id="fivepriority" onclick="selectpriority(this)">👣
+                偏平足・外反母趾が気になる・歩いていると足が疲れやすい</button>
+            <button type="button" id="onepriority" onclick="selectpriority(this)"> 💤 慢性的な疲労・不調がある</button>
+            <button type="button" id="twopriority" onclick="selectpriority(this)">👶小児の頭の歪み</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">😓 睡眠の質が悪い・朝スッキリしない</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">😔 ダイエットが続かない・リバウンドしてしまう</button>
+            <button type="button" id="fivepriority" onclick="selectpriority(this)">🧓 顔のたるみ・老け顔が気になる</button>
+            <button type="button" id="threepriority" onclick="selectpriority(this)">💦 肌荒れしやすい・化粧ノリが悪い</button>
+            <button type="button" id="fourpriority" onclick="selectpriority(this)">😩 体のむくみ・冷えが気になる</button>
+            <div class="label">その他ご自由にご記入ください</div>
+            <textarea id="priorityFreeText" rows="4" placeholder="例：営業職で出張が多く、腰に負担があります"
+                style="width:100%; margin-top:8px;"></textarea>
         </div>
 
         <div class="label">来店動機</div>
@@ -564,11 +578,14 @@
         <textarea id="message8" rows="1" placeholder="入力してください"></textarea> <!-- メッセージ入力フィールド -->
 
         <div class="label">重要項目の同意</div>
-        <div class="info-text">①トークでのご予約の受付・変更・キャンセルについては承っておりません。全てTELにてお願いいたします😊✨ 
+        <div class="info-text">①トークでのご予約の受付・変更・キャンセルについては承っておりません。全てTELにてお願いいたします😊✨
             <br><br>②当店では施術後の返金対応は致しかねます。気になる箇所がございましたら、お直しは施術後１週間以内のご来店ですと無料(※１週間超えてのご来店ですと本数分計算の有料)で承っておりますのでお気軽にご相談ください。<br>お問い合わせに関しましては、トークに詳細と合わせ状態のお写真なども添えていただけるとスムーズなやり取りとご案内ができます。<br>また、TELでも承っており、その場でのご案内が可能です。
             <br>※トークの場合、施術対応中などでご返信が遅くなることがございます。
-            <br><br>③お持ち込みネイルのお問い合わせに関しましては、リピーター様のみ受付ており、全てこちらのLINEにてご対応させて頂きます。 ご予約される前にこちらのLINEに持ち込みデザイン画像とご要望の送信をお願い致します。持ち込みデザインについてのご相談をさせていただきます。また、施術にかかるお時間、料金、ご予約時選択するメニュー等なども合わせてご連絡させていただきます。 
-            <br><br>④LINEお問い合わせのご対応時間について 営業時間中の10:00〜20:00とさせていただきます。 それ以外の時間のご返信は致しかねますことご了承を願います。 また、営業時間中につきましても施術対応中などにより返信が遅くなる場合がありますことも重ねてご了承を願います。</div>
+            <br><br>③お持ち込みネイルのお問い合わせに関しましては、リピーター様のみ受付ており、全てこちらのLINEにてご対応させて頂きます。
+            ご予約される前にこちらのLINEに持ち込みデザイン画像とご要望の送信をお願い致します。持ち込みデザインについてのご相談をさせていただきます。また、施術にかかるお時間、料金、ご予約時選択するメニュー等なども合わせてご連絡させていただきます。
+            <br><br>④LINEお問い合わせのご対応時間について 営業時間中の10:00〜20:00とさせていただきます。 それ以外の時間のご返信は致しかねますことご了承を願います。
+            また、営業時間中につきましても施術対応中などにより返信が遅くなる場合がありますことも重ねてご了承を願います。
+        </div>
         <div class="budgety-buttons">
             <button type="button" id="onebudgety" onclick="selectbudgety(this)">同意する</button>
             <button type="button" id="twobudgety" onclick="selectbudgety(this)">同意しない</button>
@@ -673,6 +690,7 @@
         }
 
         function submitForm() {
+            const message = document.getElementById('message').value;
             const message2 = document.getElementById('message2').value;
             const message3 = document.getElementById('message3').value;
             const message4 = document.getElementById('message4').value;
@@ -680,6 +698,7 @@
             const message7 = document.getElementById('message7').value;
             const message8 = document.getElementById('message8').value;
             priorityCount: priorityCount;
+            const freeText = document.getElementById('priorityFreeText').value;
             demandCount: demandCount;
             chanceCount: chanceCount;
             IntroductionCount: IntroductionCount;
@@ -687,6 +706,7 @@
             budgetyCount: budgetyCount;
 
             const formData = {
+                message,
                 message2,
                 message3,
                 message4,
@@ -694,6 +714,7 @@
                 message7,
                 message8,
                 priorityCount,
+                priorityCount: priorityCount + (freeText ? `（自由記述：${freeText}）` : ''),
                 demandCount,
                 chanceCount,
                 IntroductionCount,
