--- a/index.html
+++ b/index.html
@@ -699,7 +699,7 @@
             budgetyCount: budgetyCount;
 
             const formData = {
-                priorityCount: priorityCount + (freeText ? `（自由記述：${freeText}）` : ''),
+                priorityCount: priorityCount + (freeText ? `\n（自由記述：${freeText}）` : ''),
                 demandCount,
                 chanceCount,
                 IntroductionCount,
