--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(13px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #3770bd;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #0fa958);
+            background: linear-gradient(135deg, #3770bd, #1f4f8d);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -123,7 +123,7 @@
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
-            background-color: #13ca5e;
+            background-color: #3770bd;
             color: white;
             border-radius: 6px;
             font-size: 18px;
@@ -141,7 +141,7 @@
     margin-bottom: 10px;
     padding: 3px;
     font-weight: 600;
-    background-color: #13ca5e;
+    background-color: #3770bd;
     color: white;
     border-radius: 6px;
     font-size: 18px;
@@ -163,12 +163,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #3770bd;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #3770bd;
         }
 
         input[type="text"],
@@ -292,7 +292,7 @@
         }
 
         .calendar td.selected {
-            background-color: #13ca5e;
+            background-color: #3770bd;
             color: #fff;
         }
 
@@ -512,7 +512,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #3770bd;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -575,7 +575,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #3770bd;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -584,7 +584,7 @@
             padding: 12px;
             border: none;
             border-radius: 6px;
-            background-color: #13ca5e;
+            background-color: #3770bd;
             color: #000000;
             font-size: 16px;
             cursor: pointer;
@@ -653,7 +653,7 @@
             left: 50%;
             transform: translate(-50%, -10px);
             /* Y方向に上げる */
-            background-color: #13ca5e;
+            background-color: #3770bd;
             color: #fff;
             padding: 3px 12px;
             /* ボックスのパディングを縮小 */
@@ -737,7 +737,7 @@
     margin-bottom: 1px; /* 下に10pxのスペースをあける（余白） */
     padding: 3px; /* 内側に3pxのスペースをつける（中身がくっつかないように） */
     font-weight: 600; /* 文字を少し太くする（600は太さの目安） */
-    background-color: #13ca5e; /* 背景の色をくすんだ緑にする */
+    background-color: #3770bd; /* 背景の色をくすんだ緑にする */
     color: white; /* 文字の色を白にする */
     border-radius: 6px; /* 角を6pxだけ丸くする（ふんわりした見た目に） */
     font-size: 20px; /* 文字の大きさを18pxにする（ちょっと大きめ） */
@@ -790,7 +790,7 @@
     </div>
 
     <div class="container">
-        <h1>予約フォームのみ<br>予約フォーム
+        <h1>よしだフォト<br>予約フォーム
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -969,42 +969,42 @@
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
-                ? `<span style="color:#13ca5e;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
+                ? `<span style="color:#3770bd;"><strong>【メニュー】</strong></span><br>・${selectedSymptom.join('<br>')}`
                 : '・メニューが未選択です';
 
             // 選択肢が選択されていたら、各選択肢を改行して表示
             const irradiationsText = irradiationsCount
-                ? `<span style="color:#13ca5e;"><strong>【選択肢】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
+                ? `<span style="color:#3770bd;"><strong>【選択肢】</strong></span><br>${irradiationsCount.split(', ').join('<br>')}`
                 : '・選択肢無し';
 
             // 第1希望日が選択された場合の表示
             const selectedDate1 = document.getElementById('date1').value;
             const selectedDate1Text = selectedDate1
-                ? `・<span style="color:#13ca5e;"><strong>第1希望日</strong></span>：${formatDateTime(selectedDate1)}`
+                ? `・<span style="color:#3770bd;"><strong>第1希望日</strong></span>：${formatDateTime(selectedDate1)}`
                 : '・第1希望日が未選択です';
 
             // 第2希望日が選択された場合の表示
             const selectedDate2 = document.getElementById('date2').value;
             const selectedDate2Text = selectedDate2
-                ? `・<span style="color:#13ca5e;"><strong>第2希望日</strong></span>：${formatDateTime(selectedDate2)}`
+                ? `・<span style="color:#3770bd;"><strong>第2希望日</strong></span>：${formatDateTime(selectedDate2)}`
                 : '・第2希望日が未選択です';
 
             // 第3希望日が選択された場合の表示
             const selectedDate3 = document.getElementById('date3').value;
             const selectedDate3Text = selectedDate3
-                ? `・<span style="color:#13ca5eｓ;"><strong>第3希望日</strong></span>：${formatDateTime(selectedDate3)}`
+                ? `・<span style="color:#3770bd;"><strong>第3希望日</strong></span>：${formatDateTime(selectedDate3)}`
                 : '・第3希望日が未選択です';
 
 
             // 修正ボタン付きのHTMLを作成
             document.getElementById('displayInfo').innerHTML = `
         <div class="info-row">
-            <p><span style="color:#13ca5e;"><strong>【お名前】</strong></span><br>・${name}</p>
+            <p><span style="color:#3770bd;"><strong>【お名前】</strong></span><br>・${name}</p>
             <button class="edit-button" onclick="scrollToElement('name')">修正する</button>
         </div>
         <hr>
         <div class="info-row">
-            <p><span style="color:#13ca5e;"><strong>【お名前】</strong></span><br>・${nameyomigana}</p>
+            <p><span style="color:#3770bd;"><strong>【お名前】</strong></span><br>・${nameyomigana}</p>
             <button class="edit-button" onclick="scrollToElement('nameyomigana')">修正する</button>
         </div>
         <hr>
@@ -1324,7 +1324,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n\n電話番号：${formData.nameyomigana}\n\n電話番号：${formData.phone}\n\nご予約内容：${formData.selectedSymptom}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\nメッセージ：${formData.message}`
+                text: `【予約フォーム】\n≪お名前≫\n・${formData.name}\n\n≪お名前よみがな≫\n・${formData.nameyomigana}\n\n≪電話番号≫\n・${formData.phone}\n\n≪ご予約内容≫\n・${formData.selectedSymptom}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
