--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
             <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">プロフィール写真</button>
         </div>
         <div class="highlight-background">
-            <span class="highlight-text">ブライダルコース：オプション</span>
+            <span class="highlight-text">選択肢</span>
         </div>
         <div class="irradiations">
             <button type="button" id="firstirradiations" onclick="selectirradiations(this)" data-price="1500">ビジネス</button>
@@ -1324,7 +1324,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪お名前≫\n・${formData.name}\n\n≪お名前よみがな≫\n・${formData.nameyomigana}\n\n≪電話番号≫\n・${formData.phone}\n\n≪ご予約内容≫\n・${formData.selectedSymptom}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n・${formData.message}`
+                text: `【予約フォーム】\n≪お名前≫\n・${formData.name}\n\n≪お名前よみがな≫\n・${formData.nameyomigana}\n\n≪電話番号≫\n・${formData.phone}\n\n≪ご予約内容≫\n・${formData.selectedSymptom}≪選択肢≫\n・${formData.irradiationsCount}\n\n【希望日時】：\n・第一希望日\n${formatDate(formData.dates[0])}\n\n・第二希望日\n${formatDate(formData.dates[1])}\n\n・第三希望日\n${formatDate(formData.dates[2])}\n\n≪メッセージ≫\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
