--- a/index.html
+++ b/index.html
@@ -1337,7 +1337,7 @@ liff.sendMessages([{
     type: 'text',
     text: messageText
 }]).then(() => {
-    alert('当日キャンセルはくれぐれもお控えくださいますようお願いいたします。\n（キャンセル料のお支払い対象となります。）');
+    alert('当日キャンセルはくれぐれもお控えくださいますようお願いいたします。\nキャンセル料支払い対象となります');
     liff.closeWindow();
 }).catch((err) => {
     console.error('メッセージの送信に失敗しました', err);
