--- a/index.html
+++ b/index.html
@@ -1322,7 +1322,7 @@ const dateWithoutDayOfWeek = formData.dates[0].replace(/（.*?）/, '');
                 return;
             }
 
-            if (!formData.dates) {
+            if (!dateWithoutDayOfWeek) {
                 alert('希望日時を選択してください。');
                 return;
             }
