--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
   .submit-button {
     font-weight: bold;
   }
-
+        
     </style>
 </head>
 
@@ -637,10 +637,10 @@
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom31"
                     data-price="14800">うなじ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom32"
-                    data-price="14800">脇ダブル脱毛</button>
+                    data-price="14800">ワキダブル脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom33"
-                    data-price="14800">脇ワックス脱毛</button>
-                <button type="button" onclick="selectSymptom(this)" data-id="symptom34" data-price="14800">脇光脱毛</button>
+                    data-price="14800">ワキワックス脱毛</button>
+                <button type="button" onclick="selectSymptom(this)" data-id="symptom34" data-price="14800">ワキ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom35"
                     data-price="14800">もみあげ脱毛</button>
                 <button type="button" onclick="selectSymptom(this)" data-id="symptom36" data-price="14800">眉毛脱毛</button>
@@ -688,11 +688,11 @@
                 <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom50"
                     data-price="1500">うなじ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom51"
-                    data-price="3900">脇ダブル脱毛</button>
+                    data-price="3900">ワキダブル脱毛</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment18')" data-id="symptom52"
-                    data-price="5800">脇ワックス脱毛</button>
+                    data-price="5800">ワキワックス脱毛</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment19')" data-id="symptom53"
-                    data-price="5800">脇光脱毛</button>
+                    data-price="5800">ワキ</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment16')" data-id="symptom54"
                     data-price="1500">Sパーツ光脱毛</button>
                 <button type="button" onclick="selectSymptom(this, 'treatment17')" data-id="symptom55"
@@ -770,7 +770,7 @@
         <div class="label">メッセージ<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <div class="label">ご予約内容</div>
+        <div class="label">予約内容</div>
         <div id="displayInfo"></div> <!-- ここに選択された情報を表示します -->
 
         <button class="submit-button" onclick="submitForm()"><strong>予約を行う</strong></button>
@@ -836,9 +836,9 @@
             'うなじダブル脱毛': 60,
             'うなじワックス脱毛': 60,
             'うなじ光脱毛': 45,
-            '脇ダブル脱毛': 30,
-            '脇ワックス脱毛': 30,
-            '脇光脱毛': 30,
+            'ワキダブル脱毛': 30,
+            'ワキワックス脱毛': 30,
+            'ワキ光脱毛': 30,
             'Sパーツ光脱毛': 30,
             'Mパーツ光脱毛': 30,
             'Lパーツ光脱毛': 30,
@@ -853,9 +853,9 @@
             '新規うなじダブル脱毛': 90,
             '新規うなじワックス脱毛': 90,
             '新規うなじ光脱毛': 90,
-            '新規脇ダブル脱毛': 60,
-            '新規脇ワックス脱毛': 60,
-            '新規脇光脱毛': 60,
+            '新規ワキダブル脱毛': 60,
+            '新規ワキワックス脱毛': 60,
+            '新規ワキ光脱毛': 60,
             '新規Sパーツ光脱毛': 60,
             '新規Mパーツ光脱毛': 60,
             '新規Lパーツ光脱毛': 60,
@@ -895,7 +895,7 @@
         });
 
         function updateDisplayInfo() {
-            const visitCountText = visitCount ? `・<span style="color:red;"><strong>ご性別</strong></span>：${visitCount}` : '・ご性別が未選択です';
+            const visitCountText = visitCount ? `・<span style="color:red;"><strong>性別</strong></span>：${visitCount}` : '・性別が未選択です';
 
             // メニューが選択されていたら、各メニューを改行して表示
             const selectedSymptomText = selectedSymptom.length > 0
@@ -1300,6 +1300,7 @@
             updateDisplayInfo();
         }
 
+
         function submitForm() {
     // selectedSymptomが配列の場合は文字列に変換
     const formattedSymptom = Array.isArray(selectedSymptom)
@@ -1322,7 +1323,7 @@ const dateWithoutDayOfWeek = formData.dates[0].replace(/（.*?）/, '');
                 return;
             }
 
-            if (!dateWithoutDayOfWeek) {
+            if (!formData.dateWithoutDayOfWeek) {
                 alert('希望日時を選択してください。');
                 return;
             }
@@ -1337,7 +1338,7 @@ liff.sendMessages([{
     type: 'text',
     text: messageText
 }]).then(() => {
-    alert('当日キャンセルはくれぐれもお控えくださいますようお願いいたします。\nキャンセル料支払い対象となります');
+    alert('当日キャンセルはくれぐれもお控えくださいますようお願いいたします。\nキャンセル料支払い対あ象となります');
     liff.closeWindow();
 }).catch((err) => {
     console.error('メッセージの送信に失敗しました', err);
