--- a/index.html
+++ b/index.html
@@ -622,6 +622,8 @@
         let priorityCount = '';
         let demandCount = '';
         let chanceCount = '';
+        let selectedFullDate = '';
+        let currentDate = new Date();
         let IntroductionCount = '';
         let deliveryCount = '';
         let budgetyCount = '';
