--- a/index.html
+++ b/index.html
@@ -687,16 +687,6 @@
             deliveryCount = element.innerText;
         }
 
-        function selectbudgety(element) {
-            // 単一選択項目の処理コード
-            const buttons = document.querySelectorAll('.budgety-buttons button');
-            buttons.forEach(button => button.classList.remove('active'));
-
-            // 選択されたボタンだけにactiveクラスを追加
-            element.classList.add('active');
-            budgetyCount = element.innerText;
-        }
-
         function selectvisitreservation(element) {
             // 単一選択項目の処理コード
             const buttons = document.querySelectorAll('.visitreservation-buttons button');
@@ -729,7 +719,6 @@
             chanceCount: chanceCount;
             IntroductionCount: IntroductionCount;
             deliveryCount: deliveryCount;
-            budgetyCount: budgetyCount;
             visitreservationCount: visitreservationCount;
             informationCount: informationCount;
 
@@ -745,7 +734,6 @@
                 chanceCount,
                 IntroductionCount,
                 deliveryCount,
-                budgetyCount,
                 visitreservationCount,
                 informationCount,
             };
@@ -811,20 +799,14 @@
             }
 
             // フォームデータのチェック
-            if (!formData.budgetyCount) {
-                alert('重要項目の同意をご選択ください。');
-                return;
-            }
-
-            // フォームデータのチェック
             if (!formData.visitreservationCount) {
-                alert('薬品/ネイルでのアレルギーをご選択ください。');
+                alert('今後、受け取りたい情報はありますか？をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.informationCount) {
-                alert('重要項目の同意をご選択ください。');
+                alert('ご来院についてお聞かせくださいをご選択ください。');
                 return;
             }
 
